# led-controller

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: pages.yml
include/zachdeibert/led-controller/proto/: block.proto  connection.proto  device_config.proto  editor_config.proto
include/zachdeibert/led-controller/proto/generator/: static_color.proto
include/zachdeibert/led-controller/proto/output/: addressable.proto
include/zachdeibert/led-controller/proto/processing/: repeater.proto
platform/rp2040/: CMakeLists.txt
platform/rp2040/src/: main.cpp
src/: index.ts  main.css  main.js  protoc.js
src/editor/: block.js  block.ts  block_factory.ts  connection.js  connection.ts  connector.js  connector.ts  dag.js  dag.ts  editor.html  grid.js  grid.ts  net.js  net.ts  toolbar.js  toolbar.ts
src/generator/: static.css  static.js  static.ts
src/output/: addressable.css  addressable.js  addressable.ts
src/processing/: repeater.css  repeater.js  repeater.ts
